gen/securitycenter/v1/generator-errors.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking google-securitycenter1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/securitycenter/v1/lib)
error[E0423]: expected value, found struct `assets::AssetsActions`
    --> gen/securitycenter/v1/lib/src/lib.rs:1660:13
     |
1660 |             assets::AssetsActions
     |             ^^^^^^^^^^^^^^^^^^^^^ did you mean `assets::AssetsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/securitycenter/v1/lib/src/lib.rs:1664:13
     |
1664 |             operations::OperationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `sources::SourcesActions`
    --> gen/securitycenter/v1/lib/src/lib.rs:1668:13
     |
1668 |             sources::SourcesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `sources::SourcesActions { /* fields */ }`?

error[E0423]: expected value, found struct `findings::FindingsActions`
    --> gen/securitycenter/v1/lib/src/lib.rs:3580:17
     |
3580 |                 findings::FindingsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `findings::FindingsActions { /* fields */ }`?

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-securitycenter1`.

To learn more, run the command again with --verbose.
